# ros_collision_checking

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.xml
.github/workflows/: CI.yml  ci.yml  draft-pdf.yml
docs/: api.md
examples/: fcl_interface_example.cpp
include/robot_collision_checking/: fcl_interface.hpp  fcl_interface_collision_world.hpp  fcl_interface_types.hpp
paper/: paper.bib  paper.md
src/: fcl_interface.cpp  fcl_interface_collision_world.cpp
test/: interface_test.cpp
