<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_collision_checking</name>
  <version>0.0.0</version>
  <description>The robot collision checking package.</description>
  <maintainer email="markzolotas@gmail.com">markz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_voxel_grid</depend>
  <depend>octomap_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>libfcl-dev</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
